fixed navbar height on mobile

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -68,18 +68,18 @@
 
 @media (max-width: 768px) {
   .navbar {
-    padding: 0.5rem 1rem;
+    padding: 0.2rem !important;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 0.2rem;
   }
 
   .navbar h1 {
-    font-size: 2rem;
+    font-size: 1.8rem;
     letter-spacing: 0.5rem;
     text-align: center;
   }
 
   .icon-button {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
 }
